--- a/notebooks/lecture_12_APIs_open_data.ipynb
+++ b/notebooks/lecture_12_APIs_open_data.ipynb
@@ -1546,9 +1546,9 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python [conda env:cp255] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-cp255-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1560,7 +1560,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.8.8"
   },
   "toc": {
    "base_numbering": 1,
